Support for Roq Data files
Signed-off-by: azerr <azerr@redhat.com>